data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2639.wast
;; 10. **Test Description**: Implement a `br_if` instruction that incorrectly types results to `f32` within an enclosing `block` expecting `[] ! [i32]`. This tests the inline validation of conditional branches related to the enclosing block's result type.  Each of these test descriptions is crafted to surface how the respective WASM implementations handle type mismatches, particularly within the control flow constructs associated with the `block` instruction. The tests focus on both operand mismanagement (input/output) and branching mechanisms within blocks, tailored to exploit potential differences in error handling methods between the implementations.

(assert_invalid
  (module (func $block-br_if-mismatch
    (block (result i32) (br_if 0 (f32.const 0.0)))
  ))
  "type mismatch"
)